--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
-    <meta name="theme-color" content="#fed136">
+    <meta name="theme-color" content="#00CCFF">
     <link rel="icon" href="/favicon.png"> 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
