--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
           application programming interface (API).
         </p>
         <p>
-          The DiSARM project is lead by the Malaria Elimination Initiative at the
+          The DiSARM project is led by the Malaria Elimination Initiative at the
           University of California San Francisco in collaboration with Peoplesized
           and the Clinton Health Access Initiative. The project is supported by the
           Bill & Melinda Gates Foundation, Task Force on Global Health, and Google.
