--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,8 @@
           and the Clinton Health Access Initiative. The project is supported by the
           Bill & Melinda Gates Foundation, Task Force on Global Health, and Google.
         </p>
-    
+        
+        <iframe style="display: block; margin: auto;" width="700" height="400"  src="https://www.youtube.com/embed/o5wFP3zOG1M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
   <div class="row">
