Updating the landing page blurb

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,14 +6,16 @@
           Using data can lead to more impactful decision making over intuition
           alone. But collecting, analyzing, and visualizing data is difficult,
           especially in resource constrained settings. The Disease Surveillance and
-          Risk Monitoring (DiSARM) project is building an open-source platform that
-          enables disease control programs to better target interventions spatially,
-          guide field teams more precisely, and evaluate coverage more robustly. The
-          DiSARM platform is comprised of a
-          <a href="/app">web-based application</a> and a
-          <a href="/api">set of customized algorithms</a> accessible through an
-          application programming interface (API).
+          Risk Monitoring (DiSARM) project is building tools to help disease control 
+          programs use data to target interventions spatially,
+          guide field teams more precisely, and evaluate coverage more robustly. A key 
+          aspect of the DiSARM project is the development of algorithms that can help 
+          distill data into actionable 
+          intelligence. These algorithms can be integrated into applications such as the 
+          <a href="/app">DiSARM application</a> or can be accessed through an
+          <a href="/api">application programming interface (API)</a>  
         </p>
+                <iframe style="display: block; margin: auto;" width="700" height="400"  src="https://www.youtube.com/embed/o5wFP3zOG1M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>
           The DiSARM project is led by the Malaria Elimination Initiative at the
           University of California San Francisco in collaboration with Peoplesized
@@ -21,8 +23,9 @@
           Bill & Melinda Gates Foundation, Task Force on Global Health, and Google.
         </p>
         
-        <iframe style="display: block; margin: auto;" width="700" height="400"  src="https://www.youtube.com/embed/o5wFP3zOG1M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     </div>
+  </div>
   </div>
   <div class="row">
     <div class="col-sm-6 api">
@@ -33,5 +36,6 @@
       {% capture app_blurb %}{% include blurb_app.md %}{% endcapture %}
       {{ app_blurb | markdownify }}
     </div>
+  </div>
   </div>
 </div>
