Replacing countries in Partners and CHAI sections
Replacing countries in Partners and CHAI section with Namibia and Botswana

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -3,7 +3,7 @@
 
 <div class="container team">
   <div class="col-xs-12 col-sm-12 ">
-    <p>DiSARM development is a team effort. To ensure we are building DiSARM in the right way to do the right things, we are working very closely with the National Malaria Control Programs of Eswatini, Botswana and Zimbabwe.</p>
+    <p>DiSARM development is a team effort. To ensure we are building DiSARM in the right way to do the right things, we are working very closely with the National Malaria Control Programs of Namibia and Botswana.</p>
     <p>We are also working with the following partners:</p>
 
     {% for partner in site.partners %}
