Updating landing page to reflect that project has closed

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,21 +6,26 @@
           Using data can lead to more impactful decision making over intuition
           alone. But collecting, analyzing, and visualizing data is difficult,
           especially in resource constrained settings. The Disease Surveillance and
-          Risk Monitoring (DiSARM) project is building tools to help disease control 
+          Risk Monitoring (DiSARM) project, which ran from 2015-2020, built tools to help disease control 
           programs use data to target interventions spatially,
           guide field teams more precisely, and evaluate coverage more robustly. A key 
-          aspect of the DiSARM project is the development of algorithms that can help 
+          aspect of the DiSARM project was the development of algorithms that can help 
           distill data into actionable 
           intelligence. These algorithms can be integrated into applications such as the 
           <a href="/app">DiSARM application</a> or can be accessed through an
-          <a href="/api">application programming interface (API)</a>  
+          <a href="/api">application programming interface (API).</a>  
+          <p>
+          While the project has now closed, information about the project, including 
+          algorithm and software code, remains open-source. Links to the relevant GitHub
+          repositories are contained on the <a href="https://docs.disarm.io/">documentation site.</a>.
+          </p> 
         </p>
                 <iframe style="display: block; margin: auto;" width="700" height="400"  src="https://www.youtube.com/embed/o5wFP3zOG1M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>
-          The DiSARM project is led by the Malaria Elimination Initiative at the
+          The DiSARM project was led by the Malaria Elimination Initiative at the
           University of California San Francisco in collaboration with Peoplesized
-          and the Clinton Health Access Initiative. The project is supported by the
-          Bill & Melinda Gates Foundation, Task Force on Global Health, and Google.
+          and the Clinton Health Access Initiative. The project was supported by the
+          Bill & Melinda Gates Foundation, Task Force for Global Health, and Google.
         </p>
         
 
