--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
           <p>
           While the project has now closed, information about the project, including 
           algorithm and software code, remains open-source. Links to the relevant GitHub
-          repositories are contained on the <a href="https://docs.disarm.io/">documentation site.</a>.
+          repositories are contained on the <a href="https://docs.disarm.io/">documentation site</a>.
           </p> 
         </p>
                 <iframe style="display: block; margin: auto;" width="700" height="400"  src="https://www.youtube.com/embed/o5wFP3zOG1M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
